# thingy

./: '  .gitignore  CMakeLists.txt  README.md  go.mod
.github/workflows/: cmake-mp.yml
cmd/myCmd/: main.go
internal/tui/: tui.go
lib/tui/: CMakeLists.txt
lib/tui/include/tui/: Util.h
lib/tui/src/private/: Util.cpp
src/: main.cpp
tui/: basic_elements.go  component.go  element.go  element_context.go  environment.go  simple_component.go  text_component.go
